--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.12",
+    "browser-image-compression": "^2.0.2",
+    "dotenv": "^16.5.0",
+    "fast-average-color": "^9.5.0",
     "jsonwebtoken": "^9.0.2",
+    "motion": "^12.11.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
