most liked captions file created

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -16,6 +16,8 @@ dist-ssr
 # extra
 instructions.txt
 ToDo.jsx
+../src/pages/Test.jsx
+../client/src/pages/Test.jsx
 
 # Editor directories and files
 .vscode/*
