--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.12"
